--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 flask = "^3.1.0"
-mysql-connector = "^2.2.9"
 requests = "^2.32.3"
+mysql-connector-python = "^9.1.0"
 
 
 [build-system]
