--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 flask = "^3.1.0"
 requests = "^2.32.3"
 mysql-connector-python = "^9.1.0"
+flask-bcrypt = "^1.0.1"
 
 
 [build-system]
